bugfix z-index navbar

--- a/app/assets/stylesheets/_modules/navigation.scss
+++ b/app/assets/stylesheets/_modules/navigation.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 10;
   width: 100%;
   background-color: $color-red;
 
